# profe

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  profile.html  pyproject.toml
docs/: conf.py  index.rst  installation.rst  profe.output.rst  profe.preprocess.rst  profe.rst  profe.upload.rst  requirements.txt  usage.rst
example/TOI-7149/measurements/: 250223_g_w3.tbl
profe/: cli.py  logger.py
profe/calibrate/: __init__.py  calibration.py  cli.py
profe/output/: __init__.py  alt_az_centroid.py  astrometry_out.py  cli.py  comparison_stars.py  correlated_noise.py  exofop_out.py  field_view.py  light_curves.py  naming.py  report_generator.py  seeing_profile.py  transit_info.py
profe/preprocess/: __init__.py  cli.py  fits_processor.py  median_filter.py
profe/upload/: __init__.py  api.py  cli.py  packager.py  utils.py
profiling/: profile.html
tests/: test_correlated_noise.py  test_light_curves.py  test_median_filter.py
