[project]
name = "profe"
version = "0.1.3"
description = "Reduction Pipeline for OPTICAM Photometry of Exoplanets (PROFE in spanish)"
authors = [
    {name = "S. Paez",email = "spaez@astro.unam.mx"},
    {name = "Y. Gómez Maqueo Chew", email = "ygmc@astro.unam.mx"},
    {name = "L. H. Hebb", email = "hebb@hws.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "astropy (==5.3.2)",
    "scipy (>=1.10,<2.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "mc3 (>=3.2.1,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "types-tqdm (>=4.67.0.20250516,<5.0.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "photutils (>=2.2.0,<3.0.0)",
    "numpy (>=1.24,<2.0)",
]

[tool.poetry]
exclude = ["example"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
jupyterlab = "^4.4.4"
pre-commit = "^4.2.0"
pre-commit-hooks = "^5.0.0"
mypy = "^1.17.0"
commitizen = "^4.8.3"
flake8 = "^7.3.0"
isort = "^6.0.1"
flake8-isort = "^6.1.2"
flake8-docstrings = "^1.7.0"
flake8-typing-imports = "^1.16.0"
ruff = "^0.12.3"
bandit = "^1.8.6"
pyrefly = "^0.24.2"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[project.scripts]
profe_pre = "profe.preprocess.cli:main"
# profe_cal = "profe.calibrate.cli:main"
profe_out = "profe.output.cli:main"